base/kservice.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: quarkus-hello-world
spec:
  template:
    metadata: 
    spec:
      containers:
        - livenessProbe:
            httpGet:
              path: /health/live
          readinessProbe:
            httpGet:
              path: /health/ready
  traffic:
