base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-hello-world
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: quarkus-hello-world
  sessionAffinity: None
  type: ClusterIP
