base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-hello-world
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: quarkus-hello-world
    weight: 100
  wildcardPolicy: None
